[package]
name = "rich-sdl2-mixer-rust"
version = "0.7.2"
authors = ["MikuroXina <ryosukadnak@gmail.com>"]
edition = "2021"
description = "The sdl_mixer 2.0 wrapper for Rust."
repository = "https://github.com/MikuroXina/rich-sdl2-mixer-rust"
documentation = "https://mikuroxina.github.io/rich-sdl2-mixer-rust/rich_sdl2_mixer_rust/"
license = "Apache-2.0"
keywords = ["sdl2", "wrapper", "binding", "sdl_mixer"]
categories = ["multimedia::audio"]
rust-version = "1.56"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["dynamic"]
static = ["rich-sdl2-rust/static"]
dynamic = ["rich-sdl2-rust/dynamic"]
vendor = ["rich-sdl2-rust/vendor"]

[dependencies]
bitflags = "1.3.2"
once_cell = "1.8.0"
rich-sdl2-rust = { version = "0.10.2", default-features = false }
static_assertions = "1.1.0"

[build-dependencies]
bindgen = "0.59.1"
git2 = "0.14.4"
